@@ -9467,11 +9467,48 @@ operator|.
 name|getPort
 argument_list|()
 decl_stmt|;
+name|Configuration
+name|snnConf
+init|=
+operator|new
+name|Configuration
+argument_list|(
+name|conf
+argument_list|)
+decl_stmt|;
+name|File
+name|checkpointDir
+init|=
+operator|new
+name|File
+argument_list|(
+name|MiniDFSCluster
+operator|.
+name|getBaseDirectory
+argument_list|()
+argument_list|,
+literal|"namesecondary"
+argument_list|)
+decl_stmt|;
+name|snnConf
+operator|.
+name|set
+argument_list|(
+name|DFSConfigKeys
+operator|.
+name|DFS_NAMENODE_CHECKPOINT_DIR_KEY
+argument_list|,
+name|checkpointDir
+operator|.
+name|getAbsolutePath
+argument_list|()
+argument_list|)
+expr_stmt|;
 name|secondary
 operator|=
 name|startSecondaryNameNode
 argument_list|(
-name|conf
+name|snnConf
 argument_list|)
 expr_stmt|;
 comment|// secondary checkpoints once
